--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Profile Project</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/a917aa3c3d.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -101,8 +102,12 @@
 
         </div>
     </section> -->
+
+      <!--user stories - carosel-->
+
     
      <!--contact me: social media with icon links - icons for social meadi-->
+
      <div>
      <h1>Contact Me</h1>
      <div>
@@ -146,6 +151,15 @@
                 document.getElementById(tabname).classlist.add("active-tab");
                 }
               </script>
+              <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" 
+              integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C OGpamoFVy38MVBnE IbbVYUew OrCXaRkfj" 
+              crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" 
+              integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU 6BZp6G7niu735Sk7lN" 
+              crossorigin="anonymous"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" 
+              integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV rV" 
+              crossorigin="anonymous"></script>
               <footer>
             </footer>
 </body>
