--- a/index.html
+++ b/index.html
@@ -117,7 +117,6 @@
 
     </div>
 
-
     <!-- Carousel with languages -->
 </div>
     <!--services-->
@@ -144,7 +143,7 @@
 
             </div>
 
-            <div class="services-item">
+            <div class="services-item1">
 
                 <i class="fa-brands fa-app-store"></i>
 
@@ -156,7 +155,7 @@
 
             </div>
 
-            <div class="services-item">
+            <div class="services-item2">
 
                 <i class="fa-duotone fa-solid fa-user-secret"></i>
 
