--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <ul id="sidemenu">
                 <li><a href="#about">About Me</a></li>
                 <li><a href="#services"> My Services</a></li>
-                <li><a href="_self"> Portfolio</a></li>
+                <li><a href="index2.html"> Portfolio</a></li>
                 <li><a href="#contact"> Contact Me</a></li> 
                 <i class="fas fa-times" onclick="closemenu()"></i> 
             </ul>              
@@ -121,13 +121,13 @@
 </div>
     <!--services-->
 
-    <div class="sub-title">
+    <div id="services" class="sub-title">
 
         <h1>My Services</h1>
 
     </div>
 
-    <section id="services" class="services">
+    <section class="services">
 
         <div class="services-grid">
 
@@ -236,7 +236,6 @@
 
     </div>
 
-    <!---static button that leads back to home-->
    
      <!--contact me: social media with icon links - icons for social meadi-->
 
